--- a/src/App.css
+++ b/src/App.css
@@ -6,3 +6,25 @@
 .name {
   text-align: center;
 }
+
+.receipts-container{
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+}
+
+.form-container{
+  padding: 20px;
+  border: 1px solid black;
+  width: 250px;
+  margin: 20px auto;
+}
+
+.input-container{
+  margin: 10px;
+}
+
+.order-container{
+  /* margin-left: 10px; */
+}
+
